feature: prepare for prod 2
